--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -15,6 +15,9 @@
   "plugins": {
     "CapacitorHttp": {
       "enabled": true
+    },
+    "OneSignal": {
+      "appId": "726fe629-0b1e-4294-9a4b-39cf50212b42"
     }
   }
 }
