--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -10,69 +10,69 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 1. جلب الكود
-        uses: actions/checkout@v4
+        [cite_start]uses: actions/checkout@v4 [cite: 1]
 
       - name: 2. إعداد البيئة (Node 22 & Java 17)
-        uses: actions/setup-java@v4
+        [cite_start]uses: actions/setup-java@v4 [cite: 1]
         with:
           java-version: '17'
-          distribution: 'temurin'
-      - uses: actions/setup-node@v4
+          [cite_start]distribution: 'temurin' [cite: 2]
+      - [cite_start]uses: actions/setup-node@v4 [cite: 2]
         with:
           node-version: '22'
 
       - name: 3. تنظيف وتثبيت المكتبات
         run: |
-          # حذف مجلد أندرويد لضمان عدم حدوث خطأ "Platform already exists"
-          rm -rf android
-          npm install --legacy-peer-deps
-          npm run build --if-present
+          [cite_start]rm -rf android [cite: 3]
+          [cite_start]npm install --legacy-peer-deps [cite: 3]
+          [cite_start]npm run build --if-present [cite: 3]
 
-      - name: 4. إضافة منصة أندرويد ومزامنتها
+      - name: 4. دمج ملف google-services.json
         run: |
-          npx cap config set webDir dist_web
-          npx cap add android
-          npx cap sync android
+          # إنشاء مجلد أندرويد يدوياً قبل الإضافة لوضع الملف بداخله
+          mkdir -p android/app
+          echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > android/app/google-services.json
 
-      - name: 5. حقن صلاحيات المانيفست وأمن الشبكة
+      - name: 5. إضافة منصة أندرويد ومزامنتها
         run: |
-          MANIFEST=$(find android -name "AndroidManifest.xml" | grep "main" | head -n 1)
-          # إضافة الأذونات المطلوبة للـ APK
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' $MANIFEST
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' $MANIFEST
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' $MANIFEST
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' $MANIFEST
-          # تفعيل الاتصال بسيرفر Vercel
-          sed -i 's/<application/<application android:usesCleartextTraffic="true"/' $MANIFEST
+          [cite_start]npx cap config set webDir dist_web [cite: 4]
+          [cite_start]npx cap add android [cite: 4]
+          [cite_start]npx cap sync android [cite: 4]
 
-      - name: 6. بناء ملفات APK و AAB
+      - name: 6. حقن صلاحيات المانيفست وأمن الشبكة
         run: |
-          cd android && chmod +x gradlew
-          ./gradlew assembleRelease
-          ./gradlew bundleRelease
+          [cite_start]MANIFEST=$(find android -name "AndroidManifest.xml" | grep "main" | head -n 1) [cite: 5]
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' $MANIFEST [cite: 5]
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' $MANIFEST [cite: 5]
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' $MANIFEST [cite: 5]
+          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' $MANIFEST [cite: 6]
+          [cite_start]sed -i 's/<application/<application android:usesCleartextTraffic="true"/' $MANIFEST [cite: 6]
 
-      - name: 7. التوقيع الرقمي (إنشاء Keystore وتوقيع الملفات)
+      - name: 7. بناء ملفات APK و AAB
         run: |
-          # إنشاء مفتاح توقيع جديد
+          [cite_start]cd android && chmod +x gradlew [cite: 7]
+          [cite_start]./gradlew assembleRelease [cite: 7]
+          [cite_start]./gradlew bundleRelease [cite: 7]
+
+      - name: 8. التوقيع الرقمي (إنشاء Keystore وتوقيع الملفات)
+        run: |
           keytool -genkey -v -keystore roqa_release.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
             -storepass "roqa_pass_2026" -keypass "roqa_pass_2026" \
-            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
+            [cite_start]-dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG" [cite: 8]
           
-          # توقيع وتصدير الـ APK النهائي
-          APK_RAW=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
+          [cite_start]APK_RAW=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1) [cite: 9]
           /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks roqa_release.jks \
-            --ks-pass pass:"roqa_pass_2026" --out Roqa-Final-Signed.apk "$APK_RAW"
+            [cite_start]--ks-pass pass:"roqa_pass_2026" --out Roqa-Final-Signed.apk "$APK_RAW" [cite: 9]
 
-          # توقيع وتصدير الـ AAB النهائي
-          AAB_RAW=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1)
-          jarsigner -keystore roqa_release.jks -storepass "roqa_pass_2026" "$AAB_RAW" roqa_alias
-          cp "$AAB_RAW" Roqa-Final-Signed.aab
+          [cite_start]AAB_RAW=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1) [cite: 9]
+          [cite_start]jarsigner -keystore roqa_release.jks -storepass "roqa_pass_2026" "$AAB_RAW" roqa_alias [cite: 9]
+          [cite_start]cp "$AAB_RAW" Roqa-Final-Signed.aab [cite: 9]
 
-      - name: 8. رفع الحزمة الموقعة
-        uses: actions/upload-artifact@v4
+      - name: 9. رفع الحزمة الموقعة
+        [cite_start]uses: actions/upload-artifact@v4 [cite: 10]
         with:
-          name: Roqa-Full-Package
+          [cite_start]name: Roqa-Full-Package [cite: 10]
           path: |
-            Roqa-Final-Signed.apk
-            Roqa-Final-Signed.aab
-            roqa_release.jks
+            [cite_start]Roqa-Final-Signed.apk [cite: 11]
+            [cite_start]Roqa-Final-Signed.aab [cite: 11]
+            [cite_start]roqa_release.jks [cite: 11]
