--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -10,22 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 1. جلب الكود
-        [cite_start]uses: actions/checkout@v4 [cite: 1]
+        uses: actions/checkout@v4
 
       - name: 2. إعداد البيئة (Node 22 & Java 17)
-        [cite_start]uses: actions/setup-java@v4 [cite: 1]
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
-          [cite_start]distribution: 'temurin' [cite: 2]
-      - [cite_start]uses: actions/setup-node@v4 [cite: 2]
+          distribution: 'temurin'
+      - uses: actions/setup-node@v4
         with:
           node-version: '22'
 
       - name: 3. تنظيف وتثبيت المكتبات
         run: |
-          rm -rf android [cite: 3]
-          npm install --legacy-peer-deps [cite: 3]
-          npm run build --if-present [cite: 3]
+          rm -rf android
+          npm install --legacy-peer-deps
+          npm run build --if-present
 
       - name: 4. دمج ملف google-services.json
         run: |
@@ -35,44 +35,44 @@ jobs:
 
       - name: 5. إضافة منصة أندرويد ومزامنتها
         run: |
-          npx cap config set webDir dist_web [cite: 4]
-          npx cap add android [cite: 4]
-          npx cap sync android [cite: 4]
+          npx cap config set webDir dist_web
+          npx cap add android
+          npx cap sync android
 
       - name: 6. حقن صلاحيات المانيفست وأمن الشبكة
         run: |
-          MANIFEST=$(find android -name "AndroidManifest.xml" | grep "main" | head -n 1) [cite: 5]
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' $MANIFEST [cite: 5]
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' $MANIFEST [cite: 5]
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' $MANIFEST [cite: 5]
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' $MANIFEST [cite: 6]
-          sed -i 's/<application/<application android:usesCleartextTraffic="true"/' $MANIFEST [cite: 6]
+          MANIFEST=$(find android -name "AndroidManifest.xml" | grep "main" | head -n 1)
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' $MANIFEST
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' $MANIFEST
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' $MANIFEST
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' $MANIFEST
+          sed -i 's/<application/<application android:usesCleartextTraffic="true"/' $MANIFEST
 
       - name: 7. بناء ملفات APK و AAB
         run: |
-          cd android && chmod +x gradlew [cite: 7]
-          ./gradlew assembleRelease [cite: 7]
-          ./gradlew bundleRelease [cite: 7]
+          cd android && chmod +x gradlew
+          ./gradlew assembleRelease
+          ./gradlew bundleRelease
 
       - name: 8. التوقيع الرقمي (إنشاء Keystore وتوقيع الملفات)
         run: |
           keytool -genkey -v -keystore roqa_release.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
             -storepass "roqa_pass_2026" -keypass "roqa_pass_2026" \
-            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG" [cite: 8]
+            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
           
-          [cite_start]APK_RAW=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1) [cite: 9]
+          APK_RAW=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
           /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks roqa_release.jks \
-            [cite_start]--ks-pass pass:"roqa_pass_2026" --out Roqa-Final-Signed.apk "$APK_RAW" [cite: 9]
+            --ks-pass pass:"roqa_pass_2026" --out Roqa-Final-Signed.apk "$APK_RAW"
 
-          [cite_start]AAB_RAW=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1) [cite: 9]
-          [cite_start]jarsigner -keystore roqa_release.jks -storepass "roqa_pass_2026" "$AAB_RAW" roqa_alias [cite: 9]
-          [cite_start]cp "$AAB_RAW" Roqa-Final-Signed.aab [cite: 9]
+          AAB_RAW=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1)
+          jarsigner -keystore roqa_release.jks -storepass "roqa_pass_2026" "$AAB_RAW" roqa_alias
+          cp "$AAB_RAW" Roqa-Final-Signed.aab
 
       - name: 9. رفع الحزمة الموقعة
-        [cite_start]uses: actions/upload-artifact@v4 [cite: 10]
+        uses: actions/upload-artifact@v4
         with:
-          [cite_start]name: Roqa-Full-Package [cite: 10]
+          name: Roqa-Full-Package
           path: |
-            Roqa-Final-Signed.apk [cite: 11]
-            Roqa-Final-Signed.aab [cite: 11]
-            roqa_release.jks [cite: 11]
+            Roqa-Final-Signed.apk
+            Roqa-Final-Signed.aab
+            roqa_release.jks
