--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -44,6 +44,8 @@ jobs:
       - name: 6. حقن صلاحيات المانيفست وأمن الشبكة
         run: |
           MANIFEST=$(find android -name "AndroidManifest.xml" | grep "main" | head -n 1)
+          # إضافة تصريح إذن الإشعارات المطلوب
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />' $MANIFEST
           sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' $MANIFEST
           sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' $MANIFEST
           sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' $MANIFEST
