--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "onesignal-capacitor": "latest",
+    "@onesignal/onesignal-capacitor": "^1.0.0",
     "replicate": "^0.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
